# COURSEWORK_3_DATABASE

./: .flake8  .gitignore  database.ini.example  pyproject.toml
src/: api.py  db.py  dbmanager.py  main.py  processing.py  vacancies.py
